crates/trousseau-cli/tests/snapshots/help__help_recipients_add.snap
---
source: crates/trousseau-cli/tests/help.rs
expression: stdout
---
Add one or more recipients and re-encrypt the store to the new list.

Recipients already in the list are skipped with a note.

Usage: trousseau recipients add [OPTIONS] <RECIPIENTS>...

Arguments:
  <RECIPIENTS>...
          The recipients to add

Options:
  -h, --help
          Print help (see a summary with '-h')

Global options:
      --store <PATH>
          Use this store file. Wins over `--global` and over store discovery
          
          [env: TROUSSEAU_STORE=]

      --global
          Use your personal store instead of the nearest project store (the `.trousseau` file in
          this directory or a parent)

      --identity <PATH>
          An identity (private key) file to try when unlocking. Repeatable. Also tried:
          `TROUSSEAU_IDENTITY_FILE`, the config file's `identity.files`, the default identity file,
          `~/.ssh/id_ed25519` and `~/.ssh/id_rsa`

      --passphrase-file <PATH>
          Read the store's passphrase from this file instead of prompting. One trailing newline is
          stripped

      --json
          Print one JSON document on stdout instead of text. Errors become a JSON object on stderr

      --quiet
          Suppress informational messages on stderr. Errors still print

      --no-input
          Never prompt. A command that would prompt fails instead: exit 4 for a secret, exit 2 for a
          confirmation

Examples:
  Add an age recipient:
    trousseau recipients add age1...

  Add several at once, mixing age and SSH keys:
    trousseau recipients add age1... "ssh-ed25519 AAAA... sam@laptop"
