crates/trousseau-cli/tests/snapshots/help__help_recipients_rm.snap
---
source: crates/trousseau-cli/tests/help.rs
expression: stdout
---
Remove one or more recipients

Usage: trousseau recipients rm [OPTIONS] <RECIPIENTS>...

Arguments:
  <RECIPIENTS>...  The recipients to remove

Options:
      --force                   Skip the "you removed your own recipient" confirmation
      --store <PATH>            The store to operate on. Overrides every other resolution rule (3.2)
                                [env: TROUSSEAU_STORE=]
      --global                  Use the personal store instead of the nearest project store (3.2)
      --identity <PATH>         An identity file to try when unlocking a recipients store.
                                Repeatable (3.3.2)
      --passphrase-file <PATH>  A file holding the passphrase for a passphrase store (3.3.3)
      --json                    Emit machine-readable JSON instead of human-readable text (3.5.1)
      --quiet                   Suppress informational stderr lines. Errors still print (3.5.1)
      --no-input                Never prompt. Anything that would have prompted fails instead
                                (3.5.1)
  -h, --help                    Print help
