crates/trousseau-cli/tests/snapshots/help__help_rm.snap
---
source: crates/trousseau-cli/tests/help.rs
expression: stdout
---
Remove one or more keys.

All or nothing: if any key is missing, nothing is removed (exit 5), unless `--force` is given.

Usage: trousseau rm [OPTIONS] <KEYS>...

Arguments:
  <KEYS>...
          The keys to remove

Options:
      --force
          Ignore keys that do not exist instead of failing

  -h, --help
          Print help (see a summary with '-h')

Global options:
      --store <PATH>
          Use this store file. Wins over `--global` and over store discovery
          
          [env: TROUSSEAU_STORE=]

      --global
          Use your personal store instead of the nearest project store (the `.trousseau` file in
          this directory or a parent)

      --identity <PATH>
          An identity (private key) file to try when unlocking. Repeatable. Also tried:
          `TROUSSEAU_IDENTITY_FILE`, the config file's `identity.files`, the default identity file,
          `~/.ssh/id_ed25519` and `~/.ssh/id_rsa`

      --passphrase-file <PATH>
          Read the store's passphrase from this file instead of prompting. One trailing newline is
          stripped

      --json
          Print one JSON document on stdout instead of text. Errors become a JSON object on stderr

      --quiet
          Suppress informational messages on stderr. Errors still print

      --no-input
          Never prompt. A command that would prompt fails instead: exit 4 for a secret, exit 2 for a
          confirmation

Examples:
  Remove one key:
    trousseau rm api/token

  Remove several keys at once:
    trousseau rm api/token database/password

  Ignore keys that do not exist:
    trousseau rm --force maybe/missing api/token
