crates/trousseau-cli/tests/snapshots/help__help_set.snap
---
source: crates/trousseau-cli/tests/help.rs
expression: stdout
---
Save a value under a key.

The value is never passed on the command line, where it would end up in your shell history and the
process list. With no flags, `set` prompts for it (hidden input), or reads it from stdin when stdin
is piped.

Usage: trousseau set [OPTIONS] <KEY>

Arguments:
  <KEY>
          The key to set: a path such as `database/password`. Segments use letters, digits, `.`, `_`
          and `-`, and are separated by `/`. Keys are case-sensitive

Options:
      --from-file <PATH>
          Read the value from this file. `-` means stdin, verbatim

      --from-env <NAME>
          Read the value from this environment variable

      --binary
          Store the value as binary (base64) even if it is valid text. Binary entries are skipped by
          `run` and `env`

      --env <NAME>
          The variable name `run` and `env` use for this entry, instead of the name derived from the
          key

      --description <TEXT>
          A free-text description of the entry

  -h, --help
          Print help (see a summary with '-h')

Global options:
      --store <PATH>
          Use this store file. Wins over `--global` and over store discovery
          
          [env: TROUSSEAU_STORE=]

      --global
          Use your personal store instead of the nearest project store (the `.trousseau` file in
          this directory or a parent)

      --identity <PATH>
          An identity (private key) file to try when unlocking. Repeatable. Also tried:
          `TROUSSEAU_IDENTITY_FILE`, the config file's `identity.files`, the default identity file,
          `~/.ssh/id_ed25519` and `~/.ssh/id_rsa`

      --passphrase-file <PATH>
          Read the store's passphrase from this file instead of prompting. One trailing newline is
          stripped

      --json
          Print one JSON document on stdout instead of text. Errors become a JSON object on stderr

      --quiet
          Suppress informational messages on stderr. Errors still print

      --no-input
          Never prompt. A command that would prompt fails instead: exit 4 for a secret, exit 2 for a
          confirmation

Where the value comes from (first match wins):
  1. --from-file PATH   the file's bytes, verbatim ('-' reads stdin verbatim)
  2. --from-env NAME    the value of that environment variable
  3. a hidden prompt    when stdin is a terminal
  4. stdin              when piped; one trailing newline is stripped

Examples:
  Type the value at a hidden prompt:
    trousseau set database/password

  Pipe the value in:
    printf %s "$TOKEN" | trousseau set api/token

  Store a file, such as a TLS key (binary data is handled for you):
    trousseau set tls/server.key --from-file server.key

  Copy the value of an environment variable:
    trousseau set api/token --from-env API_TOKEN

  Choose the variable name 'run' and 'env' will use, and describe the entry:
    trousseau set db/password --env PGPASSWORD --description "Postgres role"

Notes:
  Setting an existing key replaces its value and keeps its --env and
  --description unless you pass them again.
  To change only --env or --description, use 'trousseau edit'.
