crates/trousseau-cli/tests/snapshots/help__short_help_run.snap
---
source: crates/trousseau-cli/tests/help.rs
expression: stdout
---
Run a command with the store's entries injected as environment variables

Usage: trousseau run [OPTIONS] -- <CMD>...

Arguments:
  <CMD>...  The command to run, and its arguments. Put it after `--`

Options:
      --env-prefix <P>    A prefix added in front of every variable name. Defaults to
                          `[run].env_prefix` in the config file
      --only <KEYPREFIX>  Only inject this key, or the keys under this path prefix. Repeatable
      --no-inherit        Give the child only the injected variables plus a small allow list,
                          instead of inheriting the parent's environment
  -h, --help              Print help

Global options:
      --store <PATH>            Use this store file. Wins over `--global` and over store discovery
                                [env: TROUSSEAU_STORE=]
      --global                  Use your personal store instead of the nearest project store (the
                                `.trousseau` file in this directory or a parent)
      --identity <PATH>         An identity (private key) file to try when unlocking. Repeatable.
                                Also tried: `TROUSSEAU_IDENTITY_FILE`, the config file's
                                `identity.files`, the default identity file, `~/.ssh/id_ed25519` and
                                `~/.ssh/id_rsa`
      --passphrase-file <PATH>  Read the store's passphrase from this file instead of prompting. One
                                trailing newline is stripped
      --json                    Print one JSON document on stdout instead of text. Errors become a
                                JSON object on stderr
      --quiet                   Suppress informational messages on stderr. Errors still print
      --no-input                Never prompt. A command that would prompt fails instead: exit 4 for
                                a secret, exit 2 for a confirmation
